# api/gen/go/portal/v1/resource.pb.go
@@ -1,0 +1,174 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.8
+// 	protoc        (unknown)
+// source: portal/v1/resource.proto
+
+package portalv1
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type Resource struct {
+	state       protoimpl.MessageState `protogen:"open.v1"`
+	Id          int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
+	Name        string                 `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty"`
+	Description *string                `protobuf:"bytes,3,opt,name=description,proto3,oneof" json:"description,omitempty"`
+	// Type of the resource (1: image, 2: video)
+	Type          int64   `protobuf:"varint,4,opt,name=type,proto3" json:"type,omitempty"`
+	Url           string  `protobuf:"bytes,5,opt,name=url,proto3" json:"url,omitempty"`
+	YoutubeId     *string `protobuf:"bytes,6,opt,name=youtube_id,json=youtubeId,proto3,oneof" json:"youtube_id,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *Resource) Reset() {
+	*x = Resource{}
+	mi := &file_portal_v1_resource_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *Resource) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*Resource) ProtoMessage() {}
+
+func (x *Resource) ProtoReflect() protoreflect.Message {
+	mi := &file_portal_v1_resource_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use Resource.ProtoReflect.Descriptor instead.
+func (*Resource) Descriptor() ([]byte, []int) {
+	return file_portal_v1_resource_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *Resource) GetId() int64 {
+	if x != nil {
+		return x.Id
+	}
+	return 0
+}
+
+func (x *Resource) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *Resource) GetDescription() string {
+	if x != nil && x.Description != nil {
+		return *x.Description
+	}
+	return ""
+}
+
+func (x *Resource) GetType() int64 {
+	if x != nil {
+		return x.Type
+	}
+	return 0
+}
+
+func (x *Resource) GetUrl() string {
+	if x != nil {
+		return x.Url
+	}
+	return ""
+}
+
+func (x *Resource) GetYoutubeId() string {
+	if x != nil && x.YoutubeId != nil {
+		return *x.YoutubeId
+	}
+	return ""
+}
+
+var File_portal_v1_resource_proto protoreflect.FileDescriptor
+
+const file_portal_v1_resource_proto_rawDesc = "" +
+	"\n" +
+	"\x18portal/v1/resource.proto\x12\tportal.v1\"\xbe\x01\n" +
+	"\bResource\x12\x0e\n" +
+	"\x02id\x18\x01 \x01(\x03R\x02id\x12\x12\n" +
+	"\x04name\x18\x02 \x01(\tR\x04name\x12%\n" +
+	"\vdescription\x18\x03 \x01(\tH\x00R\vdescription\x88\x01\x01\x12\x12\n" +
+	"\x04type\x18\x04 \x01(\x03R\x04type\x12\x10\n" +
+	"\x03url\x18\x05 \x01(\tR\x03url\x12\"\n" +
+	"\n" +
+	"youtube_id\x18\x06 \x01(\tH\x01R\tyoutubeId\x88\x01\x01B\x0e\n" +
+	"\f_descriptionB\r\n" +
+	"\v_youtube_idB\x9f\x01\n" +
+	"\rcom.portal.v1B\rResourceProtoP\x01Z:github.com/ming-0x0/scaffold/api/gen/go/portal/v1;portalv1\xa2\x02\x03PXX\xaa\x02\tPortal.V1\xca\x02\tPortal\\V1\xe2\x02\x15Portal\\V1\\GPBMetadata\xea\x02\n" +
+	"Portal::V1b\x06proto3"
+
+var (
+	file_portal_v1_resource_proto_rawDescOnce sync.Once
+	file_portal_v1_resource_proto_rawDescData []byte
+)
+
+func file_portal_v1_resource_proto_rawDescGZIP() []byte {
+	file_portal_v1_resource_proto_rawDescOnce.Do(func() {
+		file_portal_v1_resource_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_portal_v1_resource_proto_rawDesc), len(file_portal_v1_resource_proto_rawDesc)))
+	})
+	return file_portal_v1_resource_proto_rawDescData
+}
+
+var file_portal_v1_resource_proto_msgTypes = make([]protoimpl.MessageInfo, 1)
+var file_portal_v1_resource_proto_goTypes = []any{
+	(*Resource)(nil), // 0: portal.v1.Resource
+}
+var file_portal_v1_resource_proto_depIdxs = []int32{
+	0, // [0:0] is the sub-list for method output_type
+	0, // [0:0] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_portal_v1_resource_proto_init() }
+func file_portal_v1_resource_proto_init() {
+	if File_portal_v1_resource_proto != nil {
+		return
+	}
+	file_portal_v1_resource_proto_msgTypes[0].OneofWrappers = []any{}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_portal_v1_resource_proto_rawDesc), len(file_portal_v1_resource_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   1,
+			NumExtensions: 0,
+			NumServices:   0,
+		},
+		GoTypes:           file_portal_v1_resource_proto_goTypes,
+		DependencyIndexes: file_portal_v1_resource_proto_depIdxs,
+		MessageInfos:      file_portal_v1_resource_proto_msgTypes,
+	}.Build()
+	File_portal_v1_resource_proto = out.File
+	file_portal_v1_resource_proto_goTypes = nil
+	file_portal_v1_resource_proto_depIdxs = nil
+}
